# LED-Follower

./: CMakeLists.txt  README.md  prj.conf
include/: app_config.h
src/: GPIO_initializations.c  led_blink_patterns.c  main.c  threads_events_isr.c
