cmake_minimum_required(VERSION 3.20.0)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})

project(m2-led-follower-ugonnatrunks)

target_include_directories(app PRIVATE include)

target_sources(app PRIVATE 
    src/main.c
    src/led_blink_patterns.c
    src/led_button_initializations.c
    src/state_machines.c
)
